2003-12-10  Bolian Yin <bolian.yin@sun.com>

	*gui/e-week-view.c: Fix a event/jump button tabbing bug

2003-12-10  Harry Lu  <harry.lu@sun.com>

        Fix for bugzilla bug #51628.

        * gui/weekday-picker.c: (weekday_picker_class_init): setup focus
        handler.
        (day_clicked): new function to set day_mask when mouse clicked
        or keyboard input of space/enter.
        (handle_key_press_event): new function to handle key press event.
        (day_event_cb): handle key press event too.
        (weekday_picker_init): set widget can be focused.
        (colorize_items): change the box's outline if it is focused.
        (weekday_picker_focus): new function to handler focus event.

2003-12-09  Andrew Wu <Yang.Wu@sun.com>

	* gui/e-week-view-main-item.c (e_week_view_main_item_class_init): init a11y.
	* gui/e-week-view.c: emit signal "selected_time_changed".

2003-12-08  Bolian Yin <bolian.yin@sun.com>

	* gui/e-day-view.c (e_day_view_on_editing_started): remove setting property of "handle_popup".
	* gui/e-week-view.c (e_week_view_on_editing_started): remove setting property of "handle_popup".

2003-12-08 Carl Sun <carl.sun@sun.com>

        Fixes #46351

	* gui/e-timezone-entry.c  (e_timezone_entry_mnemonic_activate):
	new function. override the  member function of GtkWidget to handle
	nemonic_activate signal of custom class ETimezoneEntry.


2003-12-08  Bolian Yin <bolian.yin@sun.com>

	* gui/gnome-cal.c (gnome_calendar_class_init): correct argument mismatch in "goto_date" signal definition.

2003-12-05  Yong Sun <Yong.Sun@Sun.com>

	Fix for #51337

	* gui/dialogs/alarm-page.c
	Change raw string "Action/Trigger" to _("Action/Trigger")
	* gui/dialogs/recurrence-page.c
	Change raw string "Date/Time" to _("Date/Time")

2003-12-04  Harry Lu  <harry.lu@sun.com>

	Fix for bugzilla bug #51627.

	* gui/goto.c: (create_ecal): set calitem's move_selection_when_moving 
	to FALSE so that changing month and year won't send out 
	a "selection_changed" signal.
